--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,10 @@ add_executable(
     # partB/main_B.cpp
 
     partC/schedule.cpp
-    partC/main_C.cpp
+    # partC/main_C.cpp
+
+    # partA/main_A.cpp
+    test_partA.cpp
     
 )
 
